# ai_book

./: .gitignore  1_perceptron.ipynb  1_perceptron_cats_vs_dogs.ipynb  2_gradient_descent.ipynb  2_wormhole.ipynb  4_deep_learning.ipynb  5_alexnet.ipynb  5_deep_learning.ipynb  6_map_gpt_4_curve.ipynb  6_neural_scaling_gpt_3_plot.ipynb  6_neural_scaling_mnist_example.ipynb  7_mech_interp.ipynb  8_attention.ipynb  9_diffusion_clip.ipynb  9_diffusion_conditioning_and_guidance.ipynb  9_diffusion_spiral_examples.ipynb  9_stable_diffusion_ddim.ipynb  9_stable_diffusion_ddpm.ipynb  9_stable_diffusion_guidance.ipynb  CLAUDE.md  README.md  baarle_optimize.py  pyproject.toml  sweep_config.yaml
exercises/: 1_perceptron_exercises.ipynb  2_exercises_gradient_descent.ipynb  3_backpropagation_exercises.ipynb  8_attention_exercises.ipynb  9_diffusion_exercises.ipynb
tools/: notebook_converter_1.ipynb
