[project]
name = "ai-book"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "diffusers>=0.25.0",
    "einops>=0.7.0",
    "huggingface-hub[cli]>=0.36.0",
    "jaxtyping>=0.2.25",
    "jupyter>=1.1.1",
    "matplotlib>=3.8.0",
    "numpy>=1.26.0,<2.0.0",
    "opencv-python-headless>=4.8.0",
    "pandas>=2.1.0",
    "pillow>=10.0.0",
    "rich>=13.0.0",
    "sae_lens>=3.0.0",
    "smalldiffusion>=0.1.0",
    "tabulate>=0.9.0",
    "torch>=2.2.2",
    "torchvision>=0.17.0",
    "tqdm>=4.66.0",
    "transformer_lens>=2.0.0",
    "transformers>=4.36.0",
]

[project.optional-dependencies]
# umap-learn requires llvmlite which needs LLVM installed
# Install with: brew install llvm && uv sync --extra umap
umap = ["umap-learn>=0.5.0"]

[dependency-groups]
dev = [
    "black[jupyter]>=25.12.0",
]

# Note: On Linux servers without GPU, you can use the CPU-only index:
# [[tool.uv.index]]
# name = "pytorch-cpu"
# url = "https://download.pytorch.org/whl/cpu"
# explicit = true
# [tool.uv.sources]
# torch = { index = "pytorch-cpu" }
# torchvision = { index = "pytorch-cpu" }
